@@ -85,7 +85,7 @@ public class AutoFillSelectionController implements Initializable, DialogControl
         List<Object> results = progressDialog.getResults();
         if (!results.isEmpty()) {
           if (results.size() == 1) {
-            GameRepresentation game = (GameRepresentation) results.get(0);
+            GameRepresentation game = (GameRepresentation) results.getFirst();
             EventManager.getInstance().notifyTableChange(game.getId(), null);
           }
           else {
@@ -95,7 +95,7 @@ public class AutoFillSelectionController implements Initializable, DialogControl
       });
     }
     else {
-      GameRepresentation game = this.games.get(0);
+      GameRepresentation game = this.games.getFirst();
       try {
         tableDetails = client.getFrontendService().autoFillTableDetailsSimulated(game.getId(), tableDetails, vpsTableId, vpsVersionId);
       }
